# fastapi-foundation

./: .gitignore  README.md  delete_method.py  developers.json  get_req.py  langgraph_fastapi.py  local_ollama_model.py  main.py  me.json  pkl_integration.py  post_method.py  project_classifier.pkl  put_method.py  pydantic_u.py  pyproject.toml  requirements.txt  simple_ml_training.py  simpleapis.py  sms_spam_classification.py  spam_detector.pth  torch_model.py  vocab.pkl
app/: __init__.py  main.py  schemas.py
app/core/: __init__.py  config.py
app/routers/: __init__.py  developers.py  health.py  ml.py  users.py  workflows.py
app/services/: __init__.py  json_store.py  ml.py  workflows.py
examples/: README.md  __init__.py  delete_method.py  get_req.py  langgraph_fastapi.py  local_ollama_model.py  pkl_integration.py  post_method.py  put_method.py  pydantic_u.py  simple_ml_training.py  simpleapis.py  sms_spam_classification.py  torch_model.py
scripts/: train_project_classifier.py  train_spam_detector.py
